[gd_scene load_steps=12 format=3 uid="uid://m4tsue86clpx"]

[ext_resource type="Script" path="res://Mainmenu/main_menu.gd" id="1_miivc"]
[ext_resource type="Texture2D" uid="uid://dw83uahxvgqvd" path="res://Assets/Background/Main_menu_background.png" id="1_ptcvs"]
[ext_resource type="Texture2D" uid="uid://d1syxyi07wv6t" path="res://Assets/Logo/Test6.png" id="4_mf2fn"]
[ext_resource type="Texture2D" uid="uid://5diyid0nhqi0" path="res://Assets/Menu/Menu buttons=Uus_mang1.png" id="4_v427y"]
[ext_resource type="Texture2D" uid="uid://cr6jcej67nmvu" path="res://Assets/Menu/Menu buttons=Seaded1.png" id="5_tj7av"]
[ext_resource type="AudioStream" uid="uid://covwwql5uubv3" path="res://Audio/click_mouse_button.wav" id="7_1y2q1"]
[ext_resource type="Texture2D" uid="uid://crwcj4oivso8i" path="res://Assets/Menu/Menu buttons=Valju1.png" id="7_csdps"]
[ext_resource type="Texture2D" uid="uid://coqybpc6nh6db" path="res://Assets/Menu/Menu buttons=Mangujuhend1.png" id="7_vfbo0"]
[ext_resource type="PackedScene" uid="uid://dlh5o1brjrpdv" path="res://Options/options.tscn" id="8_bxm1b"]
[ext_resource type="PackedScene" uid="uid://dgh05vmajtinm" path="res://Instructions/instructions_page.tscn" id="9_j2sjn"]
[ext_resource type="PackedScene" uid="uid://5oig2ox2j1ei" path="res://Scenes/ConfirmActionPopup/confirm_changing_levels.tscn" id="12_m2dol"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_miivc")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ptcvs")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(960, 160)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_mf2fn")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="New_game_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(496, 104)
layout_mode = 2

[node name="New_game" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/New_game_Button"]
position = Vector2(248, 51)
texture = ExtResource("4_v427y")

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(496, 104)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Options_Button"]
position = Vector2(247, 53)
texture = ExtResource("5_tj7av")

[node name="Separator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Tutorials_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(496, 104)
layout_mode = 2

[node name="Sprite2D2" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Tutorials_Button"]
position = Vector2(247, 52)
texture = ExtResource("7_vfbo0")

[node name="Separator6" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(496, 104)
layout_mode = 2

[node name="Sprite2D3" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer/Exit_Button"]
position = Vector2(246, 54)
texture = ExtResource("7_csdps")

[node name="ClickButtonSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1y2q1")

[node name="Options" parent="." instance=ExtResource("8_bxm1b")]
visible = false
layout_mode = 1

[node name="InstructionsPage" parent="." instance=ExtResource("9_j2sjn")]
visible = false
layout_mode = 1

[node name="ConfirmActionPopup" parent="." instance=ExtResource("12_m2dol")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/New_game_Button" to="." method="_on_new_game_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/New_game_Button" to="." method="_on_new_game_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/New_game_Button" to="." method="on_new_game_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Options_Button" to="." method="_on_options_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Options_Button" to="." method="_on_options_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options_Button" to="." method="on_options_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Tutorials_Button" to="." method="_on_tutorials_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Tutorials_Button" to="." method="_on_tutorials_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Tutorials_Button" to="." method="on_tutorials_pressed"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Exit_Button" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Exit_Button" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit_Button" to="." method="on_exit_pressed"]
